classDiagram
direction TB
class EnrollmentReview
class AccidentHistory {
  int accidentCount
  Date fetchedAt
  String licenseStatus
  String ssn
  int totalPaidAmount
  +fetch(String) AccidentHistory
  +getSummary()
}
class AccidentRecord {
  Date accidentDate
  String accidentType
  int paidAmount
}
EnrollmentReview --> AccidentHistory : 조회
AccidentHistory "1" *-- "*" AccidentRecord
